Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-12871

Assertion "senderIndex != -1" in appoutputpane.cpp

XMLWordPrintable

      Tried to switch sessions. Got a message box about still running application. Clicked "stop application" or whatever the button says. Then received QTC_ASSERT (I had QTC_FATAL_ASSERTS set).
      Output was as follows:

      SOFT ASSERT made fatal: "senderIndex != -1" in file /sda/home/christian/dev/qtcreator-3.2/src/plugins/projectexplorer/appoutputpane.cpp, line 578
      

      Stack trace (release build, sorry):

      6  libUtils.so           0x00007ff963dbf291 Utils::writeAssertLocation(char const*) + 321
      7  libProjectExplorer.so 0x00007ff94d74ca64
      8  libQt5Core.so.5       0x00007ff9638e2d72 QObject::event(QEvent*) + 210
      9  libQt5Widgets.so.5    0x00007ff9622b4dcc QApplicationPrivate::notify_helper(QObject*, QEvent*) + 140
      10 libQt5Widgets.so.5    0x00007ff9622b9ede QApplication::notify(QObject*, QEvent*) + 974
      11 libQt5Core.so.5       0x00007ff9638b4d43 QCoreApplication::notifyInternal(QObject*, QEvent*) + 195
      12 libQt5Core.so.5       0x00007ff9638b6c7b QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) + 475
      13 libQt5Core.so.5       0x00007ff963908b23
      14 libglib-2.0.so.0      0x00007ff95e58cb84 g_main_context_dispatch + 596
      15 libglib-2.0.so.0      0x00007ff95e58cdc8
      16 libglib-2.0.so.0      0x00007ff95e58ce6c g_main_context_iteration + 44
      17 libQt5Core.so.5       0x00007ff963908f17 QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 87
      18 libQt5Core.so.5       0x00007ff9638b28a2 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 258
      19 libQt5Widgets.so.5    0x00007ff96249de3d QDialog::exec() + 493
      20 libProjectExplorer.so 0x00007ff94d6f0ab8 ProjectExplorer::RunControl::showPromptToStopDialog(QString const&, QString const&, QString const&, QString const&, bool*) const + 216
      21 libProjectExplorer.so 0x00007ff94d6f0d25 ProjectExplorer::RunControl::promptToStop(bool*) const + 309
      22 libProjectExplorer.so 0x00007ff94d754c1f
      23 libProjectExplorer.so 0x00007ff94d754ead
      24 libProjectExplorer.so 0x00007ff94d74ca75
      25 libQt5Core.so.5       0x00007ff9638e1f6d QMetaObject::activate(QObject*, int, int, void**) + 1885
      26 libProjectExplorer.so 0x00007ff94d6eb3d5 ProjectExplorer::SessionManager::aboutToUnloadSession(QString) + 37
      27 libProjectExplorer.so 0x00007ff94d7034f0 ProjectExplorer::SessionManager::loadSession(QString const&) + 256
      28 libProjectExplorer.so 0x00007ff94d7c5a94 ProjectExplorer::ProjectExplorerPlugin::setSession(QAction*) + 84
      29 libQt5Core.so.5       0x00007ff9638e1f6d QMetaObject::activate(QObject*, int, int, void**) + 1885
      30 libQt5Widgets.so.5    0x00007ff9622b0f2f QActionGroup::triggered(QAction*) + 47
      31 libQt5Widgets.so.5    0x00007ff9622b1a59
      32 libQt5Core.so.5       0x00007ff9638e1f6d QMetaObject::activate(QObject*, int, int, void**) + 1885
      33 libQt5Widgets.so.5    0x00007ff9622adbb2 QAction::triggered(bool) + 50
      34 libQt5Widgets.so.5    0x00007ff9622afff8 QAction::activate(QAction::ActionEvent) + 232
      

        For Gerrit Dashboard: QTCREATORBUG-12871
        # Subject Branch Project Status CR V

            dt Daniel Teske
            kandeler Christian Kandeler
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes