AppOutputPane: Fix wrong assert

This can actually happen and is not a problem

Task-number: QTCREATORBUG-12871
Change-Id: I0bcca39f160362a5c67cfceaefa5dd9d58d69b55
Reviewed-by: Daniel Teske <daniel.teske@digia.com>